- Scratch the last comment about vertical positioning, I'd tweaked the browser settings. - Set the DOCTYPE to force browser standards mode. - Set html height to ensure the gradient draws correctly in firefox. - Now vertical centering is broken in both.

--- a/trunk/sillypog.com/style.css
+++ b/trunk/sillypog.com/style.css
@@ -1,5 +1,8 @@
-body{
+html{
 	height:100%;
+}
+
+body{
 	margin:0px;
 	
 	background:-moz-radial-gradient(center, #f0f0f0, #cccccc) no-repeat #cccccc;
